test/typechecker.d/invalid/export4.surc.bad
module export4 where
	two: Integer
	four: Integer

two = 2

; oh dear, four is undefined
